[gd_scene load_steps=60 format=3 uid="uid://bbjiynuk8gsdm"]

[ext_resource type="Texture2D" uid="uid://bsp754ablf8xt" path="res://sprites/levels/world2/world2_emailbox.png" id="1_17agw"]
[ext_resource type="Script" uid="uid://cfse5f3bwewrf" path="res://scenes/characters/npc/interfly_email_giver.gd" id="1_buwdv"]
[ext_resource type="Texture2D" uid="uid://c5bd67bp6c7eh" path="res://sprites/characters/npc/interfly/interfly_greet0001.png" id="2_klcil"]
[ext_resource type="Texture2D" uid="uid://dyo0auydnjsdu" path="res://sprites/characters/npc/interfly/interfly_greet0002.png" id="3_au5mg"]
[ext_resource type="Texture2D" uid="uid://dy05yuwed85qc" path="res://sprites/characters/npc/interfly/interfly_greet0003.png" id="4_01ddi"]
[ext_resource type="Texture2D" uid="uid://12xsdol5177" path="res://sprites/characters/npc/interfly/interfly_greet0004.png" id="5_wi77j"]
[ext_resource type="Texture2D" uid="uid://cbv0k3s4y4s7g" path="res://sprites/characters/npc/interfly/interfly_greet0005.png" id="6_buwdv"]
[ext_resource type="Texture2D" uid="uid://saoheh4reo2r" path="res://sprites/characters/npc/interfly/interfly_greet0006.png" id="7_t33m4"]
[ext_resource type="Texture2D" uid="uid://bw4k3vmcdy5ty" path="res://sprites/characters/npc/interfly/interfly_greet0007.png" id="8_4o5fu"]
[ext_resource type="Texture2D" uid="uid://diyjowycegk34" path="res://sprites/characters/npc/interfly/interfly_greet0008.png" id="9_pu4qr"]
[ext_resource type="Texture2D" uid="uid://cs013de8ptrtl" path="res://sprites/characters/npc/interfly/interfly_greet0009.png" id="10_lsmff"]
[ext_resource type="Texture2D" uid="uid://xa157kdjob78" path="res://sprites/characters/npc/interfly/interfly_greet0010.png" id="11_dq8ot"]
[ext_resource type="Texture2D" uid="uid://cldn5n2uemmtg" path="res://sprites/characters/npc/interfly/interfly_greet0011.png" id="12_6s28y"]
[ext_resource type="Texture2D" uid="uid://p1vgtc13c3df" path="res://sprites/characters/npc/interfly/interfly_greet0012.png" id="13_pjqim"]
[ext_resource type="Texture2D" uid="uid://cthqnwk28kgdy" path="res://sprites/characters/npc/interfly/interfly_greet0013.png" id="14_0p2qa"]
[ext_resource type="Texture2D" uid="uid://cca5u2if05jjd" path="res://sprites/characters/npc/interfly/interfly_greet0014.png" id="15_mkvpp"]
[ext_resource type="Texture2D" uid="uid://bwb6m1nkfuvac" path="res://sprites/characters/npc/interfly/interfly_greet0015.png" id="16_huef2"]
[ext_resource type="Texture2D" uid="uid://cj7jiavttmjaw" path="res://sprites/characters/npc/interfly/interfly_greet0016.png" id="17_fm00a"]
[ext_resource type="Texture2D" uid="uid://csu7rmprenura" path="res://sprites/characters/npc/interfly/interfly_idle0001.png" id="18_c4vtj"]
[ext_resource type="Texture2D" uid="uid://cngl8cto8o4dv" path="res://sprites/characters/npc/interfly/interfly_idle0002.png" id="19_x3jyr"]
[ext_resource type="Texture2D" uid="uid://bnae3h3e7o1kq" path="res://sprites/characters/npc/interfly/interfly_idle0003.png" id="20_1s66w"]
[ext_resource type="Texture2D" uid="uid://cw5q2mqcudxkl" path="res://sprites/characters/npc/interfly/interfly_idle0004.png" id="21_7wq8d"]
[ext_resource type="Texture2D" uid="uid://dwsqkau5yc3m0" path="res://sprites/characters/npc/interfly/interfly_idle0005.png" id="22_05frq"]
[ext_resource type="Texture2D" uid="uid://deketctkj3pn1" path="res://sprites/characters/npc/interfly/interfly_idle0006.png" id="23_e2818"]
[ext_resource type="Texture2D" uid="uid://thqsf1axqj8y" path="res://sprites/characters/npc/interfly/interfly_sparkles.png" id="24_6xevq"]
[ext_resource type="AudioStream" uid="uid://bkyfnpv1w7h6p" path="res://sfx/characters/npc/butterfly/en/boss/sfx_butterfly_boss_help01.ogg" id="25_wi77j"]
[ext_resource type="AudioStream" uid="uid://bptbseclcv602" path="res://sfx/characters/npc/butterfly/en/boss/sfx_butterfly_boss_help02.ogg" id="26_buwdv"]
[ext_resource type="AudioStream" uid="uid://cugjc284h4k65" path="res://sfx/characters/npc/butterfly/en/boss/sfx_butterfly_boss_help03.ogg" id="27_t33m4"]
[ext_resource type="AudioStream" uid="uid://crh66dsq5oss8" path="res://sfx/characters/npc/butterfly/en/boss/sfx_butterfly_boss_help04.ogg" id="28_4o5fu"]
[ext_resource type="AudioStream" uid="uid://cd3eprp5ccf88" path="res://sfx/characters/npc/butterfly/es/boss/sfx_butterfly_boss_help01_spa.ogg" id="30_fr6ng"]
[ext_resource type="AudioStream" uid="uid://d2o3fskmvll78" path="res://sfx/characters/npc/butterfly/es/boss/sfx_butterfly_boss_help02_spa.ogg" id="31_32nls"]
[ext_resource type="AudioStream" uid="uid://bbc2bgpvqomnx" path="res://sfx/characters/npc/butterfly/es/boss/sfx_butterfly_boss_help03_spa.ogg" id="32_v6fhq"]
[ext_resource type="AudioStream" uid="uid://b21eng2g6acwo" path="res://sfx/characters/npc/butterfly/es/boss/sfx_butterfly_boss_help04_spa.ogg" id="33_prc0h"]
[ext_resource type="AudioStream" uid="uid://bqdfgc543ynvf" path="res://sfx/characters/npc/butterfly/fr/boss/sfx_butterfly_boss_help01_fre.ogg" id="34_io4km"]
[ext_resource type="AudioStream" uid="uid://cnk7tklkxubub" path="res://sfx/characters/npc/butterfly/fr/boss/sfx_butterfly_boss_help02_fre.ogg" id="35_e3rua"]
[ext_resource type="AudioStream" uid="uid://bejnsg5mdnbw2" path="res://sfx/characters/npc/butterfly/fr/boss/sfx_butterfly_boss_help03_fre.ogg" id="36_e7g7s"]
[ext_resource type="AudioStream" uid="uid://dfawn4jobtava" path="res://sfx/characters/npc/butterfly/fr/boss/sfx_butterfly_boss_help04_fre.ogg" id="37_qfwso"]
[ext_resource type="AudioStream" uid="uid://bc368ujd2qais" path="res://sfx/characters/npc/butterfly/ge/boss/sfx_butterfly_boss_help01_ger.ogg" id="38_6sqx1"]
[ext_resource type="AudioStream" uid="uid://dywjio7oqi6se" path="res://sfx/characters/npc/butterfly/ge/boss/sfx_butterfly_boss_help02_ger.ogg" id="39_jfehv"]
[ext_resource type="AudioStream" uid="uid://c66hoqb62vb8l" path="res://sfx/characters/npc/butterfly/ge/boss/sfx_butterfly_boss_help03_ger.ogg" id="40_28jui"]
[ext_resource type="AudioStream" uid="uid://dt7msh18nppkr" path="res://sfx/characters/npc/butterfly/ge/boss/sfx_butterfly_boss_help04_ger.ogg" id="41_yuv23"]
[ext_resource type="AudioStream" uid="uid://vhegemvqkd15" path="res://sfx/characters/npc/butterfly/it/boss/sfx_butterfly_boss_help01_ita.ogg" id="42_h77i2"]
[ext_resource type="AudioStream" uid="uid://gsfw8ojcaf2n" path="res://sfx/characters/npc/butterfly/it/boss/sfx_butterfly_boss_help02_ita.ogg" id="43_rpdkv"]
[ext_resource type="AudioStream" uid="uid://wlotduoxqyp7" path="res://sfx/characters/npc/butterfly/it/boss/sfx_butterfly_boss_help03_ita.ogg" id="44_h47e8"]
[ext_resource type="AudioStream" uid="uid://bwe30ytd877a8" path="res://sfx/characters/npc/butterfly/it/boss/sfx_butterfly_boss_help04_ita.ogg" id="45_loqb3"]
[ext_resource type="AudioStream" uid="uid://bp5u0o3glhx3o" path="res://sfx/characters/npc/butterfly/jp/boss/sfx_butterfly_boss_help01_jpn.ogg" id="46_koq6j"]
[ext_resource type="AudioStream" uid="uid://blnfr6hljc0og" path="res://sfx/characters/npc/butterfly/jp/boss/sfx_butterfly_boss_help02_jpn.ogg" id="47_enr76"]
[ext_resource type="AudioStream" uid="uid://djnwqmiibg758" path="res://sfx/characters/npc/butterfly/jp/boss/sfx_butterfly_boss_help03_jpn.ogg" id="48_f8phx"]
[ext_resource type="AudioStream" uid="uid://dt1fxgxu1qjsl" path="res://sfx/characters/npc/butterfly/jp/boss/sfx_butterfly_boss_help04_jpn.ogg" id="49_fyvet"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3tpfw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_klcil")
}, {
"duration": 1.0,
"texture": ExtResource("3_au5mg")
}, {
"duration": 1.0,
"texture": ExtResource("4_01ddi")
}, {
"duration": 1.0,
"texture": ExtResource("5_wi77j")
}, {
"duration": 1.0,
"texture": ExtResource("6_buwdv")
}, {
"duration": 1.0,
"texture": ExtResource("7_t33m4")
}, {
"duration": 1.0,
"texture": ExtResource("8_4o5fu")
}, {
"duration": 1.0,
"texture": ExtResource("9_pu4qr")
}, {
"duration": 1.0,
"texture": ExtResource("10_lsmff")
}, {
"duration": 1.0,
"texture": ExtResource("8_4o5fu")
}, {
"duration": 1.0,
"texture": ExtResource("9_pu4qr")
}, {
"duration": 1.0,
"texture": ExtResource("10_lsmff")
}, {
"duration": 1.0,
"texture": ExtResource("8_4o5fu")
}, {
"duration": 1.0,
"texture": ExtResource("9_pu4qr")
}, {
"duration": 1.0,
"texture": ExtResource("10_lsmff")
}, {
"duration": 1.0,
"texture": ExtResource("8_4o5fu")
}, {
"duration": 1.0,
"texture": ExtResource("9_pu4qr")
}, {
"duration": 1.0,
"texture": ExtResource("10_lsmff")
}, {
"duration": 1.0,
"texture": ExtResource("8_4o5fu")
}, {
"duration": 1.0,
"texture": ExtResource("11_dq8ot")
}, {
"duration": 1.0,
"texture": ExtResource("12_6s28y")
}, {
"duration": 1.0,
"texture": ExtResource("13_pjqim")
}, {
"duration": 1.0,
"texture": ExtResource("14_0p2qa")
}, {
"duration": 1.0,
"texture": ExtResource("15_mkvpp")
}, {
"duration": 1.0,
"texture": ExtResource("16_huef2")
}, {
"duration": 1.0,
"texture": ExtResource("17_fm00a")
}],
"loop": false,
"name": &"greet",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_c4vtj")
}, {
"duration": 1.0,
"texture": ExtResource("19_x3jyr")
}, {
"duration": 1.0,
"texture": ExtResource("20_1s66w")
}, {
"duration": 1.0,
"texture": ExtResource("21_7wq8d")
}, {
"duration": 1.0,
"texture": ExtResource("22_05frq")
}, {
"duration": 1.0,
"texture": ExtResource("23_e2818")
}],
"loop": true,
"name": &"idle",
"speed": 16.0
}]

[sub_resource type="Gradient" id="Gradient_fr6ng"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pu4qr"]
size = Vector2(55, 27)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lsmff"]
streams_count = 4
stream_0/stream = ExtResource("25_wi77j")
stream_1/stream = ExtResource("26_buwdv")
stream_2/stream = ExtResource("27_t33m4")
stream_3/stream = ExtResource("28_4o5fu")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_v2qy3"]
streams_count = 4
stream_0/stream = ExtResource("30_fr6ng")
stream_1/stream = ExtResource("31_32nls")
stream_2/stream = ExtResource("32_v6fhq")
stream_3/stream = ExtResource("33_prc0h")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rstex"]
streams_count = 4
stream_0/stream = ExtResource("34_io4km")
stream_1/stream = ExtResource("35_e3rua")
stream_2/stream = ExtResource("36_e7g7s")
stream_3/stream = ExtResource("37_qfwso")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_20bns"]
streams_count = 4
stream_0/stream = ExtResource("38_6sqx1")
stream_1/stream = ExtResource("39_jfehv")
stream_2/stream = ExtResource("40_28jui")
stream_3/stream = ExtResource("41_yuv23")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kp5x8"]
streams_count = 4
stream_0/stream = ExtResource("42_h77i2")
stream_1/stream = ExtResource("43_rpdkv")
stream_2/stream = ExtResource("44_h47e8")
stream_3/stream = ExtResource("45_loqb3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4wyyr"]
streams_count = 4
stream_0/stream = ExtResource("46_koq6j")
stream_1/stream = ExtResource("47_enr76")
stream_2/stream = ExtResource("48_f8phx")
stream_3/stream = ExtResource("49_fyvet")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buwdv"]
size = Vector2(57, 29)

[node name="InterflyEmailGiver" type="CharacterBody2D" groups=["interflygiver"]]
collision_layer = 64
collision_mask = 65
script = ExtResource("1_buwdv")

[node name="EmailShooter" type="Node2D" parent="."]

[node name="Shooter" type="Sprite2D" parent="EmailShooter"]
modulate = Color(1, 0.60784316, 0, 1)
position = Vector2(-2, 16)
scale = Vector2(0.27604172, 0.27604172)
texture = ExtResource("1_17agw")

[node name="Interfly" type="Node2D" parent="."]

[node name="Friend" type="AnimatedSprite2D" parent="Interfly"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_3tpfw")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="Sparkles" type="CPUParticles2D" parent="Interfly"]
texture_filter = 1
position = Vector2(1, 1)
texture = ExtResource("24_6xevq")
lifetime = 0.15
randomness = 0.3
emission_shape = 3
emission_rect_extents = Vector2(20.815, 18.355)
gravity = Vector2(0, 0)
scale_amount_min = 0.0
scale_amount_max = 1.2
color_ramp = SubResource("Gradient_fr6ng")

[node name="MainColl" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -8.5)
shape = SubResource("RectangleShape2D_pu4qr")

[node name="DropEmail" type="Marker2D" parent="."]
position = Vector2(0, 20)

[node name="VoiceClips" type="Node2D" parent="."]

[node name="English" type="Node2D" parent="VoiceClips"]

[node name="RescueVClips" type="AudioStreamPlayer2D" parent="VoiceClips/English"]
stream = SubResource("AudioStreamRandomizer_lsmff")
volume_db = 5.0
bus = &"voices"

[node name="Spanish" type="Node2D" parent="VoiceClips"]

[node name="RescueVClips_SPA" type="AudioStreamPlayer2D" parent="VoiceClips/Spanish"]
stream = SubResource("AudioStreamRandomizer_v2qy3")
volume_db = 5.0
bus = &"voices"

[node name="French" type="Node2D" parent="VoiceClips"]

[node name="RescueVClips_FRE" type="AudioStreamPlayer2D" parent="VoiceClips/French"]
stream = SubResource("AudioStreamRandomizer_rstex")
volume_db = 5.0
bus = &"voices"

[node name="German" type="Node2D" parent="VoiceClips"]

[node name="RescueVClips_GER" type="AudioStreamPlayer2D" parent="VoiceClips/German"]
stream = SubResource("AudioStreamRandomizer_20bns")
volume_db = 5.0
bus = &"voices"

[node name="Italian" type="Node2D" parent="VoiceClips"]

[node name="RescueVClips_ITA" type="AudioStreamPlayer2D" parent="VoiceClips/Italian"]
stream = SubResource("AudioStreamRandomizer_kp5x8")
volume_db = 5.0
bus = &"voices"

[node name="Japanese" type="Node2D" parent="VoiceClips"]

[node name="RescueVClips_JPN" type="AudioStreamPlayer2D" parent="VoiceClips/Japanese"]
stream = SubResource("AudioStreamRandomizer_4wyyr")
volume_db = 5.0
bus = &"voices"

[node name="DroppingTimer" type="Timer" parent="."]
autostart = true

[node name="ButterflyTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButterflyTrigger"]
position = Vector2(-1.5, -8.5)
shape = SubResource("RectangleShape2D_buwdv")

[connection signal="timeout" from="DroppingTimer" to="." method="_on_dropping_timer_timeout"]
